solved layout problems

--- a/public/css/partials/_main.scss
+++ b/public/css/partials/_main.scss
@@ -1,10 +1,9 @@
 .container {
     width: 100%;
     min-height: 100vh;
-    max-width: 960px;
+    max-width: 1440px;
     display: flex;
     flex-direction: column;
-    margin: 0 auto;
     padding: 0 20px;
     & > h1 {
         @include font(25);
@@ -18,7 +17,9 @@
 .timer-container {
     width: 100%;
     display: flex;
+    flex-wrap: wrap;
     padding: 20px 0;
+    justify-content: center;
     @include dimensions(mobile){
         flex-direction: column;
         align-items: center;
@@ -27,8 +28,8 @@
 .card {
     @include flex;
     flex-direction: column;
-    width: 200px;
     margin-left: 20px;
+    margin-bottom: 20px;
     &:first-child {
         margin-left: 0;
     }
@@ -52,17 +53,18 @@
     }
 }
 .btn-modal {
-    display: block;
+    @include flex;
     text-decoration: none;
     @include font(25);
     font-size: 1.6rem;
     margin: 25px 0;
+
     transition: 0.3s;
     &:hover {
         color: $soft-red;
     }
     @include dimensions(mobile){
-        margin: 0 0 20px 0;
+        margin: 0 0 30px 0;
     }
 }
 .footer {
