--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,7 +16,7 @@ body {
 .container {
   width: 100%;
   min-height: 100vh;
-  max-width: 960px;
+  max-width: 1440px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -24,7 +24,6 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin: 0 auto;
   padding: 0 20px;
 }
 
@@ -46,7 +45,12 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   padding: 20px 0;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 @media (max-width: 700px) {
@@ -75,8 +79,8 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  width: 200px;
   margin-left: 20px;
+  margin-bottom: 20px;
 }
 
 .card:first-child {
@@ -111,7 +115,15 @@ body {
 }
 
 .btn-modal {
-  display: block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   text-decoration: none;
   font-size: 2.5rem;
   color: #fff;
@@ -127,7 +139,7 @@ body {
 
 @media (max-width: 700px) {
   .btn-modal {
-    margin: 0 0 20px 0;
+    margin: 0 0 30px 0;
   }
 }
 
